Added experience for codingwithkids
https://www.codingwithkids.com detailed experience

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+                Coding Instructor
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  <a href="http://www.codingwithkids.com">Codingwithkids</a>
+                  <span class="tm-title-small">(2018 October to Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  Introducing K-12 kids to coding and programming using Scratch.
+                  Conduct coding with robotics classes with Ozobot using Ozoblockly.
+                  Coordinate with School staff and Curriculum leads.
                 </p>
               </div>
             </div>
