Added python developer content
Added python experience.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                Python Developer
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -95,11 +95,9 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small">(2017 April to 2018 Dec)</span>
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  I did online python courses. Basic Python programming with Flask. 
+                  Hands-on testing using Pytest and other frameworks.
+                  Basic knowledge of libraries like Numpy and Pandas.
                 </p>
               </div>
             </div>
