Added web technologies
Added web technologies content.

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  Self Learn
+                  <span class="tm-title-small">(2017 to Present)</span>
                 </h3>
                 <p class="mb-0">
                   I did online python courses. Basic Python programming with Flask. 
@@ -104,17 +104,15 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+                Web Technologies
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  Digital Com
+                  Self Learn
                   <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  Hands-on with HTML, CSS, and other web technologies.
                 </p>
               </div>
             </div>
