--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
                   Self Learn
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                  <span class="tm-title-small"></span>
                 </h3>
                 <p class="mb-0">
                   Hands-on with HTML, CSS, and other web technologies.
                 </p>
               </div>
             </div>
-
+<!--
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
                 Design School
@@ -137,7 +137,7 @@ https://templatemo.com/tm-530-mini-profile
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
     <!-- End portfolio section -->
 
