Updated to cloud tech

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Web Technologies
+                Cloud Technologies
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -112,7 +112,7 @@ https://templatemo.com/tm-530-mini-profile
                   <span class="tm-title-small"></span>
                 </h3>
                 <p class="mb-0">
-                  Hands-on with HTML, CSS, and other web technologies.
+                  Hands-on with AWS and Atlas services. Deployed web scale nodejs and angular applications with containerization using Docker.
                 </p>
               </div>
             </div>
